# MOVEIT-ROS-GAZEBO

Elite_Robots_CS_ROS2_Driver-main/eli_common_interface/: CMakeLists.txt  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_common_interface/msg/: Analog.msg  IOState.msg  RobotMode.msg  SafetyMode.msg  TaskStatus.msg  ToolData.msg
Elite_Robots_CS_ROS2_Driver-main/eli_common_interface/srv/: GetRobotMode.srv  GetSafetyMode.srv  GetTaskStatus.srv  SetIO.srv  SetPayload.srv  SetSpeedSliderFraction.srv
Elite_Robots_CS_ROS2_Driver-main/eli_cs_controllers/: CMakeLists.txt  README.md  README_CN.md  controller_plugins.xml  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_controllers/doc/: index.md  index_cn.md
Elite_Robots_CS_ROS2_Driver-main/eli_cs_controllers/src/: freedrive_controller.cpp  freedrive_controller_parameters.yaml  gpio_controller.cpp  scaled_joint_trajectory_controller.cpp  speed_scaling_state_broadcaster.cpp
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_calibration/: CMakeLists.txt  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_calibration/launch/: calibration_correction.launch.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_calibration/src/: calibration.cpp  calibration_consumer.cpp  calibration_correction.cpp
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_description/: CMakeLists.txt  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_description/config/: initial_positions.yaml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_description/launch/: view_cs.launch.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_description/rviz/: view_robot.rviz
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_description/test/: test_cs_urdf_xacro.py  test_view_cs_launch.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_description/urdf/: cs.ros2_control.xacro  cs.urdf.xacro  cs_macro.xacro
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/: CMakeLists.txt  Changelog.md  README.md  README_CN.md  hardware_interface_plugin.xml  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/ELITECOs/: ExternalControl-1.1.0.elico
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/config/: elite_cs_controllers.yaml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/doc/: Usage.md  Usage_CN.md
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/launch/: elite_control.launch.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/resources/: external_control.script  input_recipe.txt  output_recipe.txt
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_driver/src/: control_node.cpp  controller_stopper.cpp  controller_stopper_node.cpp  dashboard_client.cpp  hardware_interface.cpp  load_components.cpp  script_node.cpp
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_moveit_config/: CMakeLists.txt  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_moveit_config/config/: controllers.yaml  cs_servo.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_moveit_config/eli_cs_robot_moveit_config/: launch_common.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_moveit_config/launch/: cs_moveit.launch.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_moveit_config/rviz/: view_robot.rviz
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_moveit_config/srdf/: cs.srdf.xacro  cs_macro.srdf.xacro
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_simulation_gz/: CMakeLists.txt  package.xml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_simulation_gz/config/: cs_controllers.yaml
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_simulation_gz/launch/: cs_sim_control.launch.py  cs_sim_moveit.launch.py
Elite_Robots_CS_ROS2_Driver-main/eli_cs_robot_simulation_gz/scripts/: gz_control.py
Elite_Robots_CS_SDK-main/: .gitignore  CMakeLists.txt  Changelog.cn.md  Changelog.md  README.cn.md  README.md  elite-cs-series-sdkConfig.cmake.in
Elite_Robots_CS_SDK-main/cmake/: utils.cmake
Elite_Robots_CS_SDK-main/debian/: changelog  control  copyright  rules
Elite_Robots_CS_SDK-main/doc/: CMakeLists.txt
Elite_Robots_CS_SDK-main/doc/Architecture/: Arch.cn.md  Arch.en.md
Elite_Robots_CS_SDK-main/doc/BuildGuide/: BuildGuide.cn.md  BuildGuide.en.md
Elite_Robots_CS_SDK-main/doc/MessageFormat/: MessageFormat.cn.md  MessageFormat.en.md
Elite_Robots_CS_SDK-main/example/: CMakeLists.txt  connect_robot_test.cpp  dashboard_example.cpp  freedrive_example.cpp  primary_example.cpp  rtsi_example.cpp  serial_example.cpp  servoj_cartesian_example.cpp  servoj_example.cpp  servoj_plan_example.cpp  speedj_example.cpp  speedl_example.cpp  trajectory_example.cpp
Elite_Robots_CS_SDK-main/include/: EliteException.hpp  EliteOptions.hpp.in
Elite_Robots_CS_SDK-main/include/Common/: EndianUtils.hpp  RtUtils.hpp  SshUtils.hpp  (+3 more)
Elite_Robots_CS_SDK-main/script/: start_elibotsim.sh
Elite_Robots_CS_SDK-main/test/: CMakeLists.txt  ControllerLogTest.cpp  DashboardClientTest.cpp  EliteDriverTest.cpp  PrimaryPortTest.cpp  RemoteUpgradeTest.cpp  ReverseInterfaceTest.cpp  RtsiIOTest.cpp  ScriptCommnadInterfaceTest.cpp  ScriptSenderTest.cpp  SshUtilsTest.cpp  TcpServerTest.cpp  TrajectoryInterfaceTest.cpp
er7robot_arm_description/: CMakeLists.txt  package.xml
er7robot_arm_description/launch/: display.launch.xml
er7robot_arm_description/meshes/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
er7robot_arm_description/urdf/: er7.xacro  er7_two_arm.xacro  er7_two_arm_main.urdf.xacro  test.urdf.xacro
gazebo_robot_test/: CMakeLists.txt  package.xml
gazebo_robot_test/urdf/: test.urdf
realtime_servo_er7robot/: CMakeLists.txt  package.xml
realtime_servo_er7robot/config/: camera_simulated_config.yaml  laser_simulated_config.yaml
realtime_servo_er7robot/launch/: er7robot_dual_servo.launch.py
realtime_servo_er7robot/src/: camera_servo_demo.cpp  dual_arm_servo_client.cpp  dual_arm_servo_commander.cpp  dual_arm_servo_server.cpp  laser_servo_demo.cpp
receive_message_ros/: package.xml  setup.cfg  setup.py
receive_message_ros/receive_message_ros/: rec_pub_from_main.py  rec_pub_to_main.py
(+289 files in other folders)
